--- a/app/config/config_prod.yml
+++ b/app/config/config_prod.yml
@@ -5,6 +5,11 @@ framework:
   cache:
     system: 'cache.adapter.apcu'
     app: 'cache.adapter.apcu'
+  session:
+    handler_id: 'session.handler.predis'
+    cookie_path: '/'
+    cookie_secure: true
+    cookie_httponly: true
 
 monolog:
   handlers:
