--- a/.gitignore
+++ b/.gitignore
@@ -1,20 +1,9 @@
-/.web-server-pid
-/app/config/parameters.yml
-/app/data.db3
-/build/
-/phpunit.xml
 /var/*
-!/var/cache
-/var/cache/*
-!var/cache/.gitkeep
-!/var/logs
-/var/logs/*
-!var/logs/.gitkeep
-!/var/sessions
-/var/sessions/*
-!var/sessions/.gitkeep
-!var/SymfonyRequirements.php
+!/var/.gitkeep
 /vendor/
 /web/bundles/
 /.env
+/.php_cs
 /.php_cs.cache
+/.web-server-pid
+/phpunit.xml
