--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -5,7 +5,6 @@ services:
   _defaults:
     public: false
     autowire: false
-
   _instanceof:
     Symfony\Component\EventDispatcher\EventSubscriberInterface:
       tags: ['kernel.event_subscriber']
@@ -14,86 +13,74 @@ services:
 
   # security
 
-  app.user.provider:
+  user.provider:
     class: 'App\Security\UserProvider'
-
-  app.security.oauth2_provider:
+  security.oauth2_provider:
     class: 'Alcohol\OAuth2\Client\Provider\EveOnline'
     arguments:
     - clientId: '%env(EVE_CLIENT_ID)%'
       clientSecret: '%env(EVE_SECRET_KEY)%'
       redirectUri: '%env(EVE_CALLBACK_URL)%'
-
-  app.security.oauth2_client:
+  security.oauth2_client:
     class: 'App\Security\OAuth2Client'
-    arguments: ['@app.security.oauth2_provider']
-
-  app.security.oauth2_guard:
+    arguments: ['@security.oauth2_provider']
+  security.oauth2_guard:
     class: 'App\Security\OAuth2Guard'
-    arguments: ['@router', '@app.security.oauth2_client']
-
-  app.security.logout_handler:
+    arguments: ['@router', '@security.oauth2_client']
+  security.logout_handler:
     class: 'App\Security\LogoutSuccessHandler'
     arguments: ['@templating']
 
-  App\Security\OAuth2Subscriber: ['@security.token_storage', '@app.security.oauth2_client', '@router', '@logger']
+  App\Security\OAuth2Subscriber: ['@security.token_storage', '@security.oauth2_client', '@router', '@logger']
 
   # esi
 
-  app.esi.api_client:
+  esi.client:
     class: 'App\Esi\ApiClient'
     arguments: ['@httplug.message_factory']
 
   # cache
 
-  App\Cache\Warmup\Skills: ['@app.esi.api_client', '@httplug.client.async']
+  App\Cache\Warmup\Skills: ['@esi.client', '@httplug.client.async']
 
   # predis + session
 
   predis.client:
     class: 'Predis\Client'
-
   session.handler.predis:
     class: 'App\Session\Storage\Handler\PredisSessionHandler'
     arguments: ['@predis.client']
 
   # controllers
 
-  app.controller.index:
+  controller.index:
     public: true
     class: 'App\Controller\IndexController'
-    arguments: ['@templating', '@app.esi.api_client', '@httplug.client']
-
-  app.controller.assets:
+    arguments: ['@templating', '@esi.client', '@httplug.client']
+  controller.assets:
     public: true
     class: 'App\Controller\AssetsController'
-    arguments: ['@templating', '@app.esi.api_client', '@httplug.client']
-
-  app.controller.skills.trained:
+    arguments: ['@templating', '@esi.client', '@httplug.client']
+  controller.skills.trained:
     public: true
     class: 'App\Controller\Skills\TrainedController'
-    arguments: ['@templating', '@app.esi.api_client', '@httplug.client']
-
-  app.controller.skills.untrained:
+    arguments: ['@templating', '@esi.client', '@httplug.client']
+  controller.skills.untrained:
     public: true
     class: 'App\Controller\Skills\UntrainedController'
-    arguments: ['@templating', '@app.esi.api_client', '@httplug.client']
-
-  app.controller.skills.queued:
+    arguments: ['@templating', '@esi.client', '@httplug.client']
+  controller.skills.queued:
     public: true
     class: 'App\Controller\Skills\QueuedController'
-    arguments: ['@templating', '@app.esi.api_client', '@httplug.client']
-
-  app.controller.security.login:
+    arguments: ['@templating', '@esi.client', '@httplug.client']
+  controller.security.login:
     public: true
     class: 'App\Controller\Security\LoginController'
-    arguments: ['@templating', '@app.security.oauth2_provider', '%eve_scopes%']
-
-  app.controller.security.check:
+    arguments: ['@templating', '@security.oauth2_client', '%eve_scopes%']
+  controller.security.check:
     public: true
     class: 'App\Controller\Security\CheckController'
-
-  app.controller.debug:
+  controller.debug:
     public: true
     class: 'App\Controller\DebugController'
-    arguments: ['@templating', '@security.token_storage', '@app.security.oauth2_provider']
+    arguments: ['@templating', '@security.token_storage', '@security.oauth2_provider']
