--- a/composer.json
+++ b/composer.json
@@ -25,8 +25,7 @@
     "vlucas/phpdotenv": "^2.4"
   },
   "require-dev": {
-    "friendsofphp/php-cs-fixer": "dev-master || ^2.1",
-    "symfony/phpunit-bridge": "^3.0"
+    "friendsofphp/php-cs-fixer": "dev-master || ^2.1"
   },
   "scripts": {
     "symfony-scripts": [
