--- a/composer.json
+++ b/composer.json
@@ -20,13 +20,12 @@
     "sensio/framework-extra-bundle": "^3.0.2",
     "symfony/monolog-bundle": "^3.0.2",
     "symfony/polyfill-apcu": "^1.0",
-    "symfony/symfony": "3.3.x-dev",
-    "twig/twig": "^1.0||^2.0",
+    "symfony/symfony": "^3.3",
+    "twig/twig": "^2.0",
     "vlucas/phpdotenv": "^2.4"
   },
   "require-dev": {
-    "friendsofphp/php-cs-fixer": "^2.1",
-    "phpstan/phpstan": "^0.6.4"
+    "friendsofphp/php-cs-fixer": "^2.4"
   },
   "scripts": {
     "symfony-scripts": [
