--- a/docker/services/php-fpm/Dockerfile.dist
+++ b/docker/services/php-fpm/Dockerfile.dist
@@ -3,6 +3,14 @@ FROM composer:1 AS builder
 ENV APP_SECRET ''
 ENV APP_ENV prod
 ENV APP_DEBUG 0
+ENV SENTRY_DSN ''
+ENV SENTRY_RELEASE ''
+ENV SENTRY_ENVIRONMENT ''
+ENV EVE_CLIENT_ID ''
+ENV EVE_CLIENT_SECRET ''
+ENV EVE_CALLBACK_URL ''
+ENV EVE_ESI_URI ''
+
 WORKDIR /srv
 
 COPY ["bin/", "/srv/bin/"]
@@ -24,6 +32,9 @@ RUN composer install \
  && bin/console cache:warmup
 
 FROM php:7.2-fpm-alpine3.7
+
+ARG RELEASE
+ENV SENTRY_RELEASE ${RELEASE}
 
 RUN apk add --update --no-cache tini \
  && apk add --update --no-cache --virtual .build-deps icu-dev zlib-dev \
