--- a/config/packages/prod/monolog.yaml
+++ b/config/packages/prod/monolog.yaml
@@ -3,23 +3,31 @@ monolog:
         main:
             type: fingers_crossed
             action_level: error
-            handler: nested
+            handler: whatfailuregroup
             excluded_404s:
-                # regex: exclude all 404 errors from the logs
-                - ^/
-        nested:
+            # regex: exclude all 404 errors from the logs
+            - ^/
+        whatfailuregroup:
+            type: whatfailuregroup
+            members: ['file', 'stdout']
+        file:
             type: stream
-            path: "%kernel.logs_dir%/%kernel.environment%.log"
+            path: '%kernel.logs_dir%/%kernel.environment%.log'
+            level: debug
+            channels: ['!event']
+        stdout:
+            type: stream
+            path: /tmp/stdout
             level: debug
         console:
             type: console
             process_psr_3_messages: false
-            channels: ["!event", "!doctrine"]
+            channels: ['!event', '!doctrine']
         deprecation:
             type: stream
-            path: "%kernel.logs_dir%/%kernel.environment%.deprecations.log"
+            path: '%kernel.logs_dir%/%kernel.environment%.deprecations.log'
         deprecation_filter:
             type: filter
             handler: deprecation
             max_level: info
-            channels: ["php"]
+            channels: ['php']
