--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.3'
 
 services:
 
-  php:
+  php-fpm:
     build:
       context: .
       dockerfile: docker/services/php-fpm/Dockerfile
@@ -35,10 +35,7 @@ services:
       traefik.frontend.rule: "Host:eveassets.localhost"
       traefik.port: 8000
     depends_on:
-      - php
-    links:
-      - php
-      - php:fcgi
+      - php-fpm
     networks:
       - traefik_webgateway
       - default
