--- a/docker/services/php-fpm/Dockerfile.dist
+++ b/docker/services/php-fpm/Dockerfile.dist
@@ -31,7 +31,7 @@ RUN composer install \
     --no-dev \
  && bin/console cache:warmup
 
-FROM php:7.2-fpm-alpine3.7
+FROM php:7.3-fpm-alpine
 
 ARG RELEASE
 ENV SENTRY_RELEASE ${RELEASE}
