--- a/docker/services/php-fpm/Dockerfile.dist
+++ b/docker/services/php-fpm/Dockerfile.dist
@@ -37,7 +37,8 @@ ARG RELEASE
 ENV SENTRY_RELEASE ${RELEASE}
 
 RUN apk add --update --no-cache tini \
- && apk add --update --no-cache --virtual .build-deps icu-dev zlib-dev \
+ && apk add --update --no-cache --virtual .build-deps icu-dev zlib-dev libzip-dev \
+ && docker-php-ext-configure zip --with-libzip \
  && docker-php-ext-configure intl \
  && docker-php-ext-install -j$(getconf _NPROCESSORS_ONLN) intl pcntl mbstring opcache zip \
  && runDeps="$( \
