--- a/docker/nginx/Dockerfile
+++ b/docker/nginx/Dockerfile
@@ -12,8 +12,8 @@ LABEL traefik.port=8000
 
 WORKDIR /srv
 
-COPY ["docker/services/nginx/nginx.conf", "/etc/nginx/"]
-COPY ["public/", "/srv/public/"]
+COPY /docker/nginx/nginx.conf /etc/nginx/nginx.conf
+COPY /public/ /srv/public/
 
 RUN touch /var/run/nginx.pid \
  && mkdir -p /var/cache/nginx/client_temp \
@@ -21,7 +21,7 @@ RUN touch /var/run/nginx.pid \
  && find /srv -type d -exec chmod 700 {} \+ \
  && find /srv -type f -exec chmod 600 {} \+
 
-STOPSIGNAL SIGTERM
+STOPSIGNAL SIGQUIT
 
 EXPOSE 8000/tcp
 
