--- a/docker/php-fpm/php-fpm-pool.conf
+++ b/docker/php-fpm/php-fpm-pool.conf
@@ -1,6 +1,8 @@
 [global]
-error_log = /proc/self/fd/2
 daemonize = no
+; https://github.com/docker-library/php/pull/725#issuecomment-443540114
+log_limit = 8192
+error_log = /proc/self/fd/2
 
 [pastebin]
 listen = 9000
@@ -31,3 +33,7 @@ clear_env = no
 ; Note: on high load environment, this can cause some delay in the page
 ; process time (several ms).
 catch_workers_output = yes
+
+; Enable the output decoration for workers output when catch_workers_output is
+; enabled. Default value: yes. Available as of PHP 7.3.0.
+decorate_workers_output = no
