--- a/docker/php-fpm/php.ini
+++ b/docker/php-fpm/php.ini
@@ -14,14 +14,14 @@ error_reporting = -1
 ; out of your application such as database usernames and passwords or worse.
 ; For production environments, we recommend logging errors rather than
 ; sending them to STDOUT.
-display_errors = on
+display_errors = off
 
 ; The display of errors which occur during PHP's startup sequence are handled
 ; separately from display_errors. PHP's default behavior is to suppress those
 ; errors from clients. Turning the display of startup errors on can be useful in
 ; debugging configuration problems. We strongly recommend you
 ; set this to 'off' for production servers.
-display_startup_errors = on
+display_startup_errors = off
 
 ; Besides displaying errors, PHP can also log errors to locations such as a
 ; server-specific log, STDERR, or a location specified by the error_log
@@ -31,7 +31,7 @@ log_errors = on
 
 ; Log errors to specified file. PHP's default behavior is to leave this value
 ; empty.
-error_log = /tmp/stderr
+error_log = /proc/self/fd/2
 
 ; Set maximum length of log_errors. In error_log information about the source is
 ; added. The default is 1024 and 0 allows to not apply any maximum length at all.
@@ -39,3 +39,7 @@ log_errors_max_len = 0
 
 ; Default timeout for socket based streams (seconds)
 default_socket_timeout = 1
+
+; Exposes to the world that PHP is installed on the server, which includes the PHP
+; version within the HTTP header (e.g., X-Powered-By: PHP/5.3.7)
+expose_php = 0
